--- a/views/rps.html.twig
+++ b/views/rps.html.twig
@@ -9,18 +9,26 @@
   <body>
     <h2>Play Rock Paper Scissors</h2>
 
-        <form action="/anagram_confirm" method="post">
+        <form class="form-group" action="/results" method="post">
+
 
             <label for="player1">Player 1 weapon</label>
-            <select multiple class="form-control" name="player1" id="player1">
-              <option>rock</option>
-              <option>paper</option>
-              <option>scissors</option>
+            <select class="" name="player1" id="player1">
+              <option value='rock'>rock</option>
+              <option value='paper'>paper</option>
+              <option value='scissors'>scissors</option>
             </select>
+
             <br>
 
+
             <label for="player2">Player 2 weapon</label>
-            <input type="text" name="player2" id="player2" class="form-control">
+            <select class="" name="player2" id="player2">
+              <option value='rock'>rock</option>
+              <option value='paper'>paper</option>
+              <option value='scissors'>scissors</option>
+            </select>
+
             <br>
 
             <button class="btn btn-success btn-sm" type="submit" name="button">Play</button>
